# BruhOS

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs  rust-toolchain  x.py
.cargo/: config.toml
lib/zap_font/: Cargo.toml
lib/zap_font/src/: lib.rs
res/: ascii.txt
run/: limine.cfg
scripts/: build_font.py
src/: linker.ld  main.rs  polyfill.rs  util.rs
src/arch/x86_64/: cpu.rs
src/boot/: mod.rs
src/mm/: mod.rs  pmm.rs
src/stdio/: framebuffer.rs  mod.rs
tools/: limine.cfg  linker.ld
