[package]
name = "bruh_os"
version = "0.1.0"
authors = ["safinsingh <safin.singh@gmail.com>"]
edition = "2018"

[dependencies]
stivale = { git = "https://github.com/safinsingh/stivale-rs" }
zap_font = { path = "./lib/zap_font" }
spin = "0.7.1"

[dependencies.lazy_static]
version = "1.4.0"
features = ["spin_no_std"]
